--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,28 @@ jobs:
           path: dist/
           retention-days: 1
 
+  docs-scope:
+    runs-on: ubuntu-24.04
+    outputs:
+      docs_only: ${{ steps.filter.outputs.docs_only }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check for docs-only changes
+        id: filter
+        run: |
+          if git diff --name-only HEAD~1 | grep -qvE '^docs/'; then
+            echo "docs_only=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "docs_only=true" >> "$GITHUB_OUTPUT"
+          fi
+
   # Validate npm pack contents after build (only on push to main, not PRs).
   release-check:
-    needs: [docs-scope, build-artifacts]
+    needs: [docs-scope, install-check]
     if: github.event_name == 'push' && needs.docs-scope.outputs.docs_only != 'true'
     runs-on: blacksmith-4vcpu-ubuntu-2404
     steps:
